Fixed the image overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -212,12 +212,15 @@ h4 {
 }
 
 .student {
-    position: relative;
-    width: 20%;
     margin-top: 1rem;
     margin-left: 1rem;
     margin-bottom: 1rem;
     max-width: 200px;
+}
+
+.student_div {
+    width: 100%;
+    background-color: #0A2436;
 }
 
 .headshot {
@@ -445,57 +448,80 @@ h4 {
     margin-top: 57.59%
 }
 
+
 /* ------------ PRE LOADER -----------*/
 
 #loader {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  z-index: 1;
-  width: 150px;
-  height: 150px;
-  margin: -75px 0 0 -75px;
-  border: 16px solid #f3f3f3;
-  border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
 }
 
 @-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
+
 /* Add animation to "page content" */
+
 .animate-bottom {
-  position: relative;
-  -webkit-animation-name: animatebottom;
-  -webkit-animation-duration: 1s;
-  animation-name: animatebottom;
-  animation-duration: 1s
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 1s;
+    animation-name: animatebottom;
+    animation-duration: 1s
 }
 
 @-webkit-keyframes animatebottom {
-  from { bottom:-100px; opacity:0 } 
-  to { bottom:0px; opacity:1 }
+    from {
+        bottom: -100px;
+        opacity: 0
+    }
+    to {
+        bottom: 0px;
+        opacity: 1
+    }
 }
 
-@keyframes animatebottom { 
-  from{ bottom:-100px; opacity:0 } 
-  to{ bottom:0; opacity:1 }
+@keyframes animatebottom {
+    from {
+        bottom: -100px;
+        opacity: 0
+    }
+    to {
+        bottom: 0;
+        opacity: 1
+    }
 }
 
 #myDiv {
-  display: none;
-  text-align: center;
+    display: none;
+    text-align: center;
 }
 
 
@@ -570,7 +596,7 @@ h4 {
     padding-right: 1em;
     border: 3px solid #0A2335;
     margin: .25em .25em .25em .25em;
-    background-position: 8px center ;
+    background-position: 8px center;
 }
 
 .button:hover {
@@ -792,25 +818,20 @@ h4 {
 
 .grid {
     background: #0A2436;
-    margin-left: auto;
+    margin-left: 11rem;
     margin-right: auto;
     margin-top: 2em;
-    padding-left: 1em;
-    padding-right: 1em;
     padding-top: 1em;
     padding-bottom: 1em;
     width: 80%;
 }
 
-.student_div {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2rem;
-    padding-top: 1.5rem;
-    background: #0A2436;
-    padding-left: 5rem;
-    padding-bottom: 4rem;
+
+/* fluid 4 columns */
+
+.grid-sizer,
+.grid-item {
+    width: 25%;
 }
 
 
@@ -830,7 +851,6 @@ h4 {
     bottom: 0;
     z-index: 10000000!important;
     width: 100%;
-    
 }
 
 
@@ -840,6 +860,10 @@ h4 {
 /*    MOBILE     */
 
 @media screen and (max-width: 767px) {
+    .grid-sizer,
+    .grid-item {
+        width: 50%;
+    }
     .splash_img_desktop {
         display: none;
     }
@@ -860,7 +884,6 @@ h4 {
     .bd_logo {
         width: 8%
     }
-
     .header_type {
         width: 100%!important;
         font-size: .9rem!important;
@@ -908,61 +931,45 @@ h4 {
         width: 25%;
         margin-top: 175%
     }
-    
-    .student_div {
-    padding-left: 2rem;
-    padding-right: 2rem;
-    
-}
-    
- 
     .grid {
-    padding: 0em;
-    width: 100%;
-}
-    
-    h3 {
-    font-size: 0.6em;
+        padding: 0em;
+        width: 100%;
     }
-    
+    h3 {
+        font-size: 0.6em;
+    }
     .button {
         font-size: 0.9em;
     }
-    
     .student {
         width: 30%;
         margin-left: 0%;
         margin-right: 3%;
     }
-    
     .student:nth-child(3n) {
         margin-right: 0%;
-        
     }
-    
 }
 
-
 @media screen and (max-width: 450px) {
-   
     .student {
         width: 47%;
         margin-left: 0%;
         margin-right: 3%;
     }
-    
     .student:nth-child(2n) {
         margin-right: 0%;
-        
     }
-    
-    
 }
 
 
 /*    TABLET     */
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
+    .grid-sizer,
+    .grid-item {
+        width: 33.3%;
+    }
     .lander_img_desktop {
         display: none;
     }
